[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/styles/header_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/nodes/ResultView.gd" type="Script" id=2]
[ext_resource path="res://assets/styles/ui_theme.tres" type="Theme" id=3]

[node name="ResultPreview" type="ColorRect"]
margin_top = 440.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 232 )
theme = ExtResource( 3 )
color = Color( 0.156863, 0.176471, 0.2, 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
color = Color( 0.176471, 0.486275, 0.0627451, 1 )

[node name="Label" type="Label" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Result:"
align = 1
valign = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer" groups=["snapshottable"]]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 280.0
size_flags_vertical = 3
split_offset = 140

[node name="SingleTile" type="ColorRect" parent="VBoxContainer/HSplitContainer"]
margin_right = 340.0
margin_bottom = 248.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
color = Color( 0.380392, 0.388235, 0.411765, 0.47451 )

[node name="SubtileTexture" type="TextureRect" parent="VBoxContainer/HSplitContainer/SingleTile"]
margin_right = 300.0
margin_bottom = 232.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/SingleTile"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -22.0
text = "Bitmask:"

[node name="BitmaskLabel" type="Label" parent="VBoxContainer/HSplitContainer/SingleTile"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -22.0
margin_right = -2.0

[node name="Result" type="Control" parent="VBoxContainer/HSplitContainer"]
margin_left = 346.0
margin_right = 1280.0
margin_bottom = 248.0
rect_min_size = Vector2( 320, 180 )
size_flags_horizontal = 3

[node name="TextureContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Result"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Result/TextureContainer"]

[connection signal="resized" from="VBoxContainer/HSplitContainer/SingleTile" to="." method="_on_SingleTile_resized"]
